--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+appdirs==1.4.4
 argostranslate==1.9.6
 fastapi==0.115.12 
-uvicorn==0.34.1
+langid==1.1.6
 requests==2.32.3
-appdirs==1.4.4
+uvicorn==0.34.1
